Fixed height of camera preview on mobile phones

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -211,8 +211,8 @@
 
 @media (max-width: 768px) {
   .camera-view {
-    margin: 10px;
-    min-height: 150px;
+    margin: 0 0 10px 0;
+    min-height: 350px;
     max-height: 40vh;
 	min-width:100%;
   }
@@ -220,7 +220,7 @@
   .control-panel {
     padding: 15px;
     max-height: 60vh;
-    min-height: 250px;
+    min-height: 450px;
 	min-width:100%;
   }
   
